Fix full height (100vh) issue on iOS

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -42,9 +42,9 @@ body {
 }
 
 div#app {
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	height: 100vh;
 }
 
 main {
@@ -58,5 +58,16 @@ main {
 @media only screen and (min-width: 400px) {
 	html {
 		font-size: 20px;
+	}
+}
+
+/* only adjust the min-height on iOS devices */
+@supports (-webkit-touch-callout: none) {
+	div#app {
+		min-height: -webkit-fill-available;
+	}
+
+	main {
+		padding: 2rem var(--padding-s);
 	}
 }
